# kubrick-cli

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security.yml
docs/: CICD.md  DOCKER.md  PROVIDERS.md  SECURITY.md  TESTING.md  TRITON.md  WIKI.md
kubrick_cli/: __init__.py  agent_loop.py  animated_display.py  classifier.py  config.py  context_manager.py  display.py  evaluator.py  execution_strategy.py  main.py  planning.py  progress.py  safety.py  scheduler.py  setup_wizard.py  tools.py  triton_client.py  ui.py
kubrick_cli/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  triton_provider.py
scripts/: install-kubrick-docker.sh  uninstall-kubrick-docker.sh
tests/: __init__.py  conftest.py  test_client.py  test_completion_detector.py  test_config.py  test_safety.py  test_tool_calling.py  test_tool_executor.py  test_triton.py  test_triton_client_unit.py
